syntax = "proto3";

import "google/protobuf/timestamp.proto";

package subsService;
option go_package = "/subsService";

message Subscription {
  int64 id = 1;
  string name = 2;
  float price = 3;
  string description = 4;
  repeated string possibilities = 5;
  int64 idTrainer = 6;
  google.protobuf.Timestamp dateExpiration = 7;
}

message Status {
  bool successfully = 1;
  string message = 2;
  int64 httpStatus = 3;
}

message RegistrationRequest {
  int64 id = 1;
}

message RegistrationResponse {
  Status status = 1;
}

message GetSubscriptionByAccountIdRequest {
  int64 id = 1;
}

message GetSubscriptionByAccountIdResponse {
  Subscription subscription = 1;
  Status status = 2;
}

message GetSubscriptionsRequest {}

message GetSubscriptionsResponse {
  repeated Subscription subscriptions = 1;
  Status status = 2;
}

message ChangeSubscriptionRequest {
  int64 idClient = 1;
  int64 idSubscription = 2;
  int64 idTrainer = 3;
  google.protobuf.Timestamp dateExpiration = 4;
}

message ChangeSubscriptionResponse {
  Status status = 1;
}

service SubsService {
  rpc Registration(RegistrationRequest) returns (RegistrationResponse);
  rpc GetSubscriptionByAccountId(GetSubscriptionByAccountIdRequest) returns (GetSubscriptionByAccountIdResponse);
  rpc GetSubscriptions(GetSubscriptionsRequest) returns (GetSubscriptionsResponse);
  rpc ChangeSubscription(ChangeSubscriptionRequest) returns (ChangeSubscriptionResponse);
}